--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -24,11 +24,22 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:title="Recuperar Senha"
-                app:titleTextColor="@color/color_default"
-                android:textAlignment="center"
-                />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/btn_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_arrow_back"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="Recuperar conta"
+                    android:textColor="@color/color_default"
+                    android:textSize="24sp" />
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
@@ -62,9 +73,9 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/appCompatEditText"
-                android:background="@drawable/bg_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit"
                 android:drawableStart="@drawable/ic_mail"
                 android:drawablePadding="10dp"
                 android:drawableTint="@color/color_default"
@@ -72,15 +83,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="24dp"
             android:layout_marginHorizontal="24dp"
             android:background="@drawable/bg_button_login"
             android:text="Enviar link"
             android:textColor="@color/white"
-            android:layout_margin="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
