--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -38,6 +38,7 @@
             android:background="@drawable/bg_edit"
             android:drawableStart="@drawable/ic_mail"
             android:drawablePadding="10dp"
+            android:inputType="textEmailAddress"
             android:drawableTint="@color/color_default"
             android:hint="Email"
             android:padding="14dp"
@@ -61,6 +62,7 @@
             android:drawableTint="@color/color_default"
             android:hint="Senha"
             android:padding="14dp"
+            android:inputType="textPassword"
             android:textColorHint="@color/color_hint_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -112,7 +114,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/color_default"
-
+            android:visibility="visible"
+            app:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
