--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -85,7 +85,7 @@
 
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/appCompatButton"
+            android:id="@+id/btn_recover"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
@@ -104,12 +104,11 @@
             android:layout_gravity="center"
             android:layout_marginVertical="10dp"
             android:indeterminateTint="@color/color_default"
-            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
-            app:visibility="invisible" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_recover"
+             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
