--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -192,26 +192,28 @@
                 android:padding="14dp"
                 android:textColorHint="@color/color_hint_default" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Confirme a Senha"
-                android:textColor="@color/color_default"
-                android:textStyle="bold" />
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edit_confirm_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/bg_edit"
-                android:drawableStart="@drawable/ic_password"
-                android:drawablePadding="10dp"
-                android:drawableTint="@color/color_default"
-                android:hint="Confirmar Senha"
-                android:inputType="textPassword"
-                android:padding="14dp"
-                android:textColorHint="@color/color_hint_default" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Confirme a Senha"-->
+<!--                android:textColor="@color/color_default"-->
+<!--                android:textStyle="bold" />-->
+<!--            -->
+
+<!--            <androidx.appcompat.widget.AppCompatEditText-->
+<!--                android:id="@+id/edit_confirm_password"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:layout_marginBottom="10dp"-->
+<!--                android:background="@drawable/bg_edit"-->
+<!--                android:drawableStart="@drawable/ic_password"-->
+<!--                android:drawablePadding="10dp"-->
+<!--                android:drawableTint="@color/color_default"-->
+<!--                android:hint="Confirmar Senha"-->
+<!--                android:inputType="textPassword"-->
+<!--                android:padding="14dp"-->
+<!--                android:textColorHint="@color/color_hint_default" />-->
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_create_account"
@@ -231,8 +233,7 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="10dp"
                 android:indeterminateTint="@color/color_default"
-                android:visibility="visible"
-                app:visibility="invisible" />
+                 />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
