--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,18 +31,13 @@
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edit_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/Theme.EditText"
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/bg_edit"
             android:drawableStart="@drawable/ic_mail"
-            android:drawablePadding="10dp"
             android:inputType="textEmailAddress"
-            android:drawableTint="@color/color_default"
             android:hint="Email"
-            android:padding="14dp"
-            android:textColorHint="@color/color_hint_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,18 +47,12 @@
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edit_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/Theme.EditText"
             android:layout_marginHorizontal="24dp"
             android:layout_marginVertical="24dp"
-            android:background="@drawable/bg_edit"
             android:drawableStart="@drawable/ic_password"
-            android:drawablePadding="10dp"
-            android:drawableTint="@color/color_default"
             android:hint="Senha"
-            android:padding="14dp"
             android:inputType="textPassword"
-            android:textColorHint="@color/color_hint_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +107,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            android:visibility="invisible"
+            tools:visibility="visible"/>
 
 
 
