--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:theme="@style/Theme.BankFinance.TelaComAppBarDiferente"
     tools:context=".presenter.auth.register.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,6 +16,7 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:background="@drawable/bg_app_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -24,19 +26,16 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:textAlignment="center">
 
-                <ImageView
-                    android:id="@+id/btn_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_back" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:text="Criar conta"
+                    android:layout_marginEnd="32dp"
                     android:textColor="@color/color_default"
                     android:textSize="24sp" />
             </androidx.appcompat.widget.Toolbar>
@@ -97,18 +96,13 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edit_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/Theme.EditText"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/bg_edit"
                 android:drawableStart="@drawable/ic_person"
-                android:drawablePadding="10dp"
                 android:drawableTint="@color/color_default"
                 android:hint="nome completo"
                 android:inputType="text"
-                android:padding="14dp"
-                android:textColorHint="@color/color_hint_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -125,18 +119,12 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edit_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/Theme.EditText"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/bg_edit"
                 android:drawableStart="@drawable/ic_phone"
-                android:drawablePadding="10dp"
-                android:drawableTint="@color/color_default"
                 android:hint="(99)99999-9999"
                 android:inputType="phone"
-                android:padding="14dp"
-                android:textColorHint="@color/color_hint_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -152,18 +140,12 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edit_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/Theme.EditText"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/bg_edit"
                 android:drawableStart="@drawable/ic_mail"
-                android:drawablePadding="10dp"
-                android:drawableTint="@color/color_default"
                 android:hint="digite seu email"
                 android:inputType="textEmailAddress"
-                android:padding="14dp"
-                android:textColorHint="@color/color_hint_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -179,41 +161,36 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edit_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-               android:layout_marginTop="4dp"
+                style="@style/Theme.EditText"
+                android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/bg_edit"
                 android:drawableStart="@drawable/ic_password"
-                android:drawablePadding="10dp"
-                android:drawableTint="@color/color_default"
                 android:hint="digite sua senha"
                 android:inputType="textPassword"
-                android:padding="14dp"
-                android:textColorHint="@color/color_hint_default" />
+                />
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Confirme a Senha"-->
-<!--                android:textColor="@color/color_default"-->
-<!--                android:textStyle="bold" />-->
-<!--            -->
+            <!--            <TextView-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="Confirme a Senha"-->
+            <!--                android:textColor="@color/color_default"-->
+            <!--                android:textStyle="bold" />-->
+            <!--            -->
 
-<!--            <androidx.appcompat.widget.AppCompatEditText-->
-<!--                android:id="@+id/edit_confirm_password"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="4dp"-->
-<!--                android:layout_marginBottom="10dp"-->
-<!--                android:background="@drawable/bg_edit"-->
-<!--                android:drawableStart="@drawable/ic_password"-->
-<!--                android:drawablePadding="10dp"-->
-<!--                android:drawableTint="@color/color_default"-->
-<!--                android:hint="Confirmar Senha"-->
-<!--                android:inputType="textPassword"-->
-<!--                android:padding="14dp"-->
-<!--                android:textColorHint="@color/color_hint_default" />-->
+            <!--            <androidx.appcompat.widget.AppCompatEditText-->
+            <!--                android:id="@+id/edit_confirm_password"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="4dp"-->
+            <!--                android:layout_marginBottom="10dp"-->
+            <!--                android:background="@drawable/bg_edit"-->
+            <!--                android:drawableStart="@drawable/ic_password"-->
+            <!--                android:drawablePadding="10dp"-->
+            <!--                android:drawableTint="@color/color_default"-->
+            <!--                android:hint="Confirmar Senha"-->
+            <!--                android:inputType="textPassword"-->
+            <!--                android:padding="14dp"-->
+            <!--                android:textColorHint="@color/color_hint_default" />-->
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_create_account"
@@ -221,10 +198,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="14dp"
-                android:textStyle="bold"
                 android:background="@drawable/bg_button_login"
                 android:text="Criar Conta"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
 
             <ProgressBar
@@ -233,7 +210,8 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="10dp"
                 android:indeterminateTint="@color/color_default"
-                 />
+                android:visibility="invisible"
+                tools:visibility="visible" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
