--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/home"
         android:title="Inicio"
         />
@@ -10,25 +10,25 @@
 
 
     <item
-        android:id="@+id/navigation_charge_phone"
+        android:id="@+id/chargePhoneFragment"
         android:icon="@drawable/ic_phone_line"
         android:title="Recarga Celular"
         />
 
     <item
-        android:id="@+id/navigation_extract"
+        android:id="@+id/walletFragment"
         android:icon="@drawable/ic_list_line"
         android:title="Extrato"
         />
 
     <item
-        android:id="@+id/navigation_transfer"
+        android:id="@+id/transferFragment"
         android:icon="@drawable/ic_exchange_fill"
         android:title="Transferencia"
         />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_person"
         android:title="Perfil"
         />
