--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -25,7 +25,11 @@
         android:id="@+id/homeFragment"
         android:name="dev.airon.bankfinance.presenter.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_depositFragment"
+            app:destination="@id/depositFragment" />
+    </fragment>
     <navigation android:id="@+id/authentication"
         app:startDestination="@id/loginFragment">
         <fragment
@@ -62,10 +66,14 @@
         android:label="fragment_charge_phone"
         tools:layout="@layout/fragment_charge_phone" />
     <fragment
-        android:id="@+id/deposityFragment"
-        android:name="dev.airon.bankfinance.presenter.deposity.DeposityFragment"
-        android:label="fragment_deposity"
-        tools:layout="@layout/fragment_deposity" />
+        android:id="@+id/depositFragment"
+        android:name="dev.airon.bankfinance.presenter.deposit.DepositFragment"
+        android:label="fragment_deposit"
+        tools:layout="@layout/fragment_deposit">
+        <action
+            android:id="@+id/action_deposityFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="dev.airon.bankfinance.presenter.profile.ProfileFragment"
