modificando layout telas de registro e recuperção de conta

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,12 +5,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
-    android:background="@color/white"
+    android:fitsSystemWindows="true"
     tools:context=".presenter.auth.login.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        >
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -110,8 +112,6 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_login"
             android:visibility="invisible"
             tools:visibility="visible"/>
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
