--- a/app/src/main/res/layout/fragment_charge_phone.xml
+++ b/app/src/main/res/layout/fragment_charge_phone.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+
     tools:context=".presenter.charge.ChargePhoneFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:text="eu sou a tela de recarga de celular" />
 
 </FrameLayout>
