--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fillViewport="true"
+    android:fitsSystemWindows="true"
     android:theme="@style/Theme.BankFinance.TelaComAppBarDiferente"
     tools:context=".presenter.auth.recover.RecoverFragment">
 
@@ -28,24 +29,35 @@
                 android:layout_height="wrap_content">
 
 
-
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="32dp"
                     android:gravity="center_horizontal"
                     android:text="Recuperar conta"
-                    android:layout_marginEnd="32dp"
                     android:textColor="@color/color_default"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="415dp"
+            android:layout_height="180dp"
+
+            android:src="@drawable/reset_account_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginTop="24dp"
             android:text="Digite seu e-mail que te enviaremos um link para redefinir sua senha"
             android:textAlignment="center"
             android:textSize="18sp"
@@ -53,43 +65,67 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:hint="Email"
-            android:textColorHint="@color/color_hint_default"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
 
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/appCompatEditText"
+                android:id="@+id/edt_send_email"
                 style="@style/Theme.EditText"
-                android:drawableStart="@drawable/ic_mail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                android:drawableStart="@drawable/ic_mail_line"
+                android:hint="E-mail"
                 android:inputType="textEmailAddress" />
-        </com.google.android.material.textfield.TextInputLayout>
+
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_recover"
+            style="@style/ButtonStyleSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
             android:layout_marginHorizontal="24dp"
-            android:background="@drawable/bg_button_login"
+
             android:text="Enviar link"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/edt_send_email" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginVertical="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_recover">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="Não tem uma conta? " />
+
+            <TextView
+                android:id="@+id/btn_create_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Criar Conta"
+                android:textColor="@color/color_default" />
+
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progress_bar"
@@ -98,13 +134,26 @@
             android:layout_gravity="center"
             android:layout_marginVertical="10dp"
             android:indeterminateTint="@color/color_default"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_recover"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/flying_mail_icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_mail_send"
             android:visibility="invisible"
-            tools:visibility="visible"
-             />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
