--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-<!--    Color gradiente-->
+    <color name="boxStrokeColor_error">#F2061E</color>
+    <color name="txt_message_bottom_sheet">#438883</color>
+    <color name="color_status_bar_home">#358882</color>
+    <color name="color_transaction_payment">#25A969</color>
+    <color name="color_transaction_pending">#F95B51</color>
+    <color name="color_transaction_date">#666666</color>
+
+
+    <!--    Color gradiente-->
     <color name="color_transfer_start">#C30D12</color>
     <color name="color_transfer_middle">#E83B3E</color>
     <color name="color_transfer_last">#E47177</color>
@@ -13,4 +21,8 @@
     <color name="color_deposit_start">#0D9C30</color>
     <color name="color_deposit_middle">#3BE83B</color>
     <color name="color_deposit_last">#77E471</color>
+
+    <color name="color_button_start">#27A7E7</color>
+    <color name="color_button_middle">#2196F3</color>
+    <color name="color_button_last">#2272EB</color>
 </resources>
