--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,47 @@
 
     </style>
 
+    <style name="ButtonStyleSignIn" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:background">@drawable/bg_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+<!--        <item name="android:fontFamily">@font/inter_semibold</item>-->
+        <item name="android:layout_width">358dp</item>
+        <item name="android:layout_height">64dp</item>
+<!--        <item name="android:layout_marginHorizontal">20dp</item>-->
+<!--        <item name="android:layout_marginVertical">10dp</item>-->
+    </style>
+
+    <style name="HintTextStyle" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:textSize">16sp</item>
+
+    </style>
+
+
+    <style name="TextInputLayoutStyle" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="hintTextColor">@color/black</item>
+
+        <item name="boxStrokeErrorColor">@color/boxStrokeColor_error</item>
+        <item name="hintTextAppearance">@style/HintTextStyle</item>
+        <item name="android:textColorHint">@color/black</item>
+    </style>
+
+    <style name="EditTextStyle" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@drawable/bg_edit</item>
+        <item name="android:textColor">@color/color_default</item>
+<!--        <item name="android:fontFamily">@font/inter</item>-->
+        <item name="android:drawablePadding">6dp</item>
+        <item name="android:drawableTint">@color/color_default</item>
+    </style>
+
+
+
     <style name="Theme.EditText" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:background">@drawable/bg_edit</item>
