--- a/app/src/main/res/drawable/bg_profile_bottom.xml
+++ b/app/src/main/res/drawable/bg_profile_bottom.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:type="linear"
-        android:angle="300"
+        android:type="radial"
+        android:angle="0"
         android:startColor="@color/color_button_start"
         android:centerColor="@color/color_button_middle"
-        android:endColor="@color/color_button_last"
-        />
+        android:endColor="@color/color_button_last" />
 
-    <corners android:bottomRightRadius="50dp" android:bottomLeftRadius="50dp"/>
+    <corners android:topRightRadius="800dp" />
+
 
 </shape>
