--- a/app/src/main/res/drawable/bg_profile_top.xml
+++ b/app/src/main/res/drawable/bg_profile_top.xml
@@ -2,13 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:type="linear"
+        android:type="radial"
         android:angle="300"
         android:startColor="@color/color_button_start"
         android:centerColor="@color/color_button_middle"
-        android:endColor="@color/color_button_last"
-        />
+        android:endColor="@color/color_button_last" />
 
-    <corners android:bottomRightRadius="50dp" android:bottomLeftRadius="50dp"/>
+    <corners android:bottomLeftRadius="800dp"/>
 
 </shape>
