--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -30,14 +30,13 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="20dp"
                 android:textAlignment="center">
 
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:layout_gravity="center"
                    android:gravity="center"
+                   android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    >
 
@@ -45,6 +44,7 @@
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Criar Conta"
+
                        android:textColor="@color/color_default"
                        android:textStyle="bold"
                        android:textSize="32sp"/>
@@ -52,7 +52,7 @@
 
                    <ImageView
                        android:id="@+id/imageView"
-                       android:layout_width="415dp"
+                       android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/create_account_image" />
                </LinearLayout>
