--- a/app/src/main/res/drawable/ic_transaction.xml
+++ b/app/src/main/res/drawable/ic_transaction.xml
@@ -16,8 +16,8 @@
             android:endX="19.063"
             android:endY="30.375"
             android:type="linear">
-          <item android:offset="0" android:color="#FF549994"/>
-          <item android:offset="1" android:color="#FF408782"/>
+          <item android:offset="0" android:color="#000000"/>
+          <item android:offset="1" android:color="#000000"/>
         </gradient>
       </aapt:attr>
     </path>
