--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,7 +17,7 @@
 
     <item
         android:id="@+id/walletFragment"
-        android:icon="@drawable/ic_list_line"
+        android:icon="@drawable/ic_transaction"
         android:title="Extrato"
         />
 
