feature: contrução layout tela de deposito recebido

--- a/app/src/main/res/layout/fragment_deposit.xml
+++ b/app/src/main/res/layout/fragment_deposit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:theme="@style/Theme.BankFinance.TelaComAppBarDeposit"
-    tools:context=".presenter.deposit.DepositFragment">
+    tools:context=".presenter.features.deposit.DepositFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
