--- a/app/src/main/res/drawable/bg_button_deposit_receipt.xml
+++ b/app/src/main/res/drawable/bg_button_deposit_receipt.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="36dp"/>
-    <solid android:color="@color/color_default"/>
+    <solid android:color="@color/white"/>
+    <stroke android:color="@color/blue_final" android:width="1dp"/>
 
 </shape>
