--- a/app/src/main/res/drawable/ic_arrow_down_circle_fill.xml
+++ b/app/src/main/res/drawable/ic_arrow_down_circle_fill.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M12,2C17.52,2 22,6.48 22,12C22,17.52 17.52,22 12,22C6.48,22 2,17.52 2,12C2,6.48 6.48,2 12,2ZM13,12V8H11V12H8L12,16L16,12H13Z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/color_deposit_start"/>
 </vector>
